# rec.nvim

./: README.md
crates/rec-cli/: Cargo.toml  main.rs
crates/rec-cli/src/: main.rs
lua/rec/: cli.lua  config.lua  dashboard.lua  geometry.lua  init.lua  keys.lua  storage.lua
lua/rec/ui/: keys.lua
plugin/: rec.lua
